Fixed alignment on forgot password

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -27,6 +27,11 @@ form button {
   margin-top: 2em;
 }
 
+.group {
+  display: flex;
+  flex-direction: column;
+}
+
 form button {
   border: none;
   text-transform: uppercase;
